--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+   <link rel="shortcut icon" href="./assets/img/refavicon.png">
     <title>Form Registration</title>
 
     <!-- Custom fonts for this template-->
