--- a/logged.html
+++ b/logged.html
@@ -18,10 +18,10 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="assets/css/sb-admin-2.min.css" rel="stylesheet">
-    <script src="assets/js/register.js"></script>
-    <script src="assets/js/dashboard.js"></script>
-    <script src="assets/js/checker.js"></script>
+    <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <script src="js/register.js"></script>
+    <script src="js/dashboard.js"></script>
+    <script src="js/checker.js"></script>
   
 
 
@@ -36,7 +36,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="logged.html">
               
                 <div class="sidebar-brand-text mx-3">Welcome <br>
                 <sup>
@@ -53,7 +53,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="logged.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -76,8 +76,8 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Learning</h6>
-                        <a class="collapse-item" onclick="BibleVerse()" href="#">Bible Reading</a>
-                        <a class="collapse-item" href="#">Bible Courses</a>
+                        <a class="collapse-item" href="ctp2.html">Chapel Library</a>
+                        <a class="collapse-item" href="ctp3.html">Audio Sermons
                     </div>
                 </div>
             </li>
@@ -93,9 +93,9 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Periodicals</h6>
-                       <a class="collapse-item" href="#">Temptation</a>
-                        <a class="collapse-item" href="#">Providence</a>
-                        <a class="collapse-item" href="#">Conscience</a>
+                       <a class="collapse-item" href="ctp4.html">Grade Broadcaster</a>
+                        <a class="collapse-item" href="ctp5.html">Providence</a>
+                        <a class="collapse-item" href="ctp6.html">Conscience</a>
                     </div>
                 </div>
             </li>
@@ -114,12 +114,12 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Books</span>
+                    <span>Live Video Feed</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Downloadables</h6>
-                        <a class="collapse-item" href="#">Books</a>
+                        <a class="collapse-item" href="ctp7.html">Videos</a>
                         <!-- <a class="collapse-item" href="blank.html">Leaflets</a> -->
                     </div>
                 </div>
@@ -240,8 +240,6 @@
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
              </div>
-
-              
 
                     <div class="row">
 
@@ -471,7 +469,7 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="assets/js/sb-admin-2.min.js"></script>
+    <script src="js/sb-admin-2.min.js"></script>
 
     <!-- Page level plugins -->
     <script src="vendor/chart.js/Chart.min.js"></script>
