--- a/ctp4.html
+++ b/ctp4.html
@@ -18,10 +18,10 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
-    <script src="js/register.js"></script>
-    <script src="js/dashboard.js"></script>
-    <script src="js/checker.js"></script>
+    <link href="assets/css/sb-admin-2.min.css" rel="stylesheet">
+    <script src="assets/js/register.js"></script>
+    <script src="assets/js/dashboard.js"></script>
+    <script src="assets/js/checker.js"></script>
   
 
 
