--- a/forgot-password.html
+++ b/forgot-password.html
@@ -8,6 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Mr+Dafoe&family=UnifrakturCook&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e170880bfe.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./assets/img/refavicon.png">
+    <link rel="stylesheet" href="./assets/css/refroot-style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
 
     <title>Forgot Password</title>
 
@@ -82,7 +88,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="assets/js/sb-admin-2.min.js"></script>
-
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 
 </html>
