--- a/forgot-password.html
+++ b/forgot-password.html
@@ -44,7 +44,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link disabled" aria-current="page" href="./home.html"><span class="ref-nav">Home</span></a>
+                      <a class="nav-link" href="./home.html"><span class="ref-nav">Home</span></a>
                     </li>
   
                     <li class="nav-item">
