--- a/register.html
+++ b/register.html
@@ -117,7 +117,7 @@
                           </div></div>
                     <div class="form-group row">
                     <div class="col-sm-6 mb-3 mb-sm-0">   
-                    <input type="password"  class="form-control form-control-user" id="password" placeholder="New Password">
+                    <input type="password"  class="form-control form-control-user" id="password" placeholder="New Password"><i class="fas fa-eye" for="password"></i>
                     </div></div>
                     <div class="form-group row">
                     <div class="col-sm-6 mb-3 mb-sm-0">   
