--- a/login.html
+++ b/login.html
@@ -112,7 +112,7 @@
                         </div></div>
                         <div class="form-group row">
                             <div class="col-sm-6 mb-3 mb-sm-0">
-                        <input type="password"  class="form-control form-control-user" id="password" placeholder="Password"><i class="fas fa-eye" for="password"></i>
+                        <input type="password"  class="form-control form-control-user" id="password" placeholder="Password"><i class="fas fa-eye mata" for="password"></i>
                         </div>
                         </div>
                          <div class="form-group row">
