--- a/register.html
+++ b/register.html
@@ -156,7 +156,7 @@
   
     <!-- Our script must be loaded after firebase references -->
     <script src="assets/js/register.js"></script>
-
+    <script src="assets/js/refroot.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   
 </html>
